<resources>
    <string name="app_name">Identify Tonic</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="choose_mode">Select mode of calculation</string>
    <string name="upload_in_progress">Uploading..</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="instrument">Instrument</string>
    <string name="other">Other</string>
    <string name="calculate">Calculate</string>
    <string name="upload_complete">Uploaded</string>
    <string name="calculating_wait">Calculating.. Please wait</string>
    <string name="ok">OK</string>
    <string name="measure_another">Measure another</string>
    <string name="calculated_tonic">Calculated tonic is %1$s</string>
    <string name="success">Success!</string>
    <string name="stay">STAY</string>
    <string name="leave">Leave</string>
    <string name="are_you_sure">Are you sure you want to leave?</string>
    <string name="all_progress_will_be_lost">Any upload progress will be lost</string>
    <string name="change_metadata">Change Metadata</string>
    <string name="need_permissions">Need all requested permissions to proceed</string>
    <string name="exit">exit</string>
    <string name="offline_experimental">Offline (experimental)</string>
    <string name="choose_file">Input the file</string>
    <string name="settings_text">Following are the settings:\n\nAlgorithm used: %1$s\n\nPercentage of low energy frames: %3$s\n\nNumber of seconds to use: %2$s</string>
    <string name="change">Change</string>
    <string name="settings">Settings</string>
    <string name="calculate_tonic">Calculate tonic</string>
    <string name="algorithm_used">Algorithm used</string>
    <string name="percentage_low_ef">Percentage of low energy frames used</string>
    <string name="num_seconds_to_use">Number of seconds to use</string>
    <string name="server">Server address</string>
    <string name="ftp_server">FTP server</string>
    <string name="update">Update</string>
    <string name="select_metadata">Select metadata</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="retry">Retry</string>
    <string name="an_error_occured">An error occured</string>
    <string name="trimming">Trimming</string>
    <string name="record_for_a_minute">Record for a minute (drone compulsory)</string>
    <string name="click_to_start">Click to start recording</string>
    <string name="save">Save</string>
    <string name="failed_to_trim">Failed to trim</string>
</resources>
