<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OfflineCalculationActivity"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_metadata"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <iitm.speechlab.gettonicfromfile.views.TableButtonGroupLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:id="@+id/metadata_radio_group"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#fff"
            >
            <RadioButton
                android:checked="true"
                android:id="@+id/metadata_male"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/male"
                />
            <RadioButton
                android:id="@+id/metadata_female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/female"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/metadata_instrument"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/instrument"/>
            <RadioButton
                android:id="@+id/metadata_other"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/other"/>
        </TableRow>
    </iitm.speechlab.gettonicfromfile.views.TableButtonGroupLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_gravity="center"
        android:id="@+id/calculate_button"
        android:onClick="onCalculateClickedOffline"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background_rounded_rect"
        android:textColor="@color/White" />

</LinearLayout>