<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingsActivity"
    android:background="@color/White"
    android:padding="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/algorithm_used"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:textSize="14sp"/>
    <Spinner
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/algorithms_available"
        android:id="@+id/algo_spinner"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage_low_ef"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:textSize="14sp"/>
    <Spinner
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/percentage_of_frames_to_use"
        android:id="@+id/percentage_spinner"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_seconds_to_use"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:textSize="14sp"/>
    <Spinner
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/num_seconds_to_use"
        android:id="@+id/seconds_spinner"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rect_border"
        android:visibility="gone"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server"
            android:textColor="@color/Black"
            android:padding="10dp"
            android:textSize="14sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server"
            android:id="@+id/server_edit_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ftp_server"
            android:textColor="@color/Black"
            android:padding="10dp"
            android:textSize="14sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ftp_server"
            android:id="@+id/ftp_server_edit_text"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_rounded_rect"
            android:text="@string/update"
            android:textColor="@color/White"
            android:onClick="updateServer"/>
    </LinearLayout>

</LinearLayout>