<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OnlineCalculationActivity"

    android:orientation="vertical"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_in_progress"
            android:textColor="@color/Black"
            android:textSize="25sp"
            android:id="@+id/upload_status_text"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_black_24dp"
            android:id="@+id/upload_done_image"
            android:padding="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text=""
            android:id="@+id/upload_speed_text"/>
    </LinearLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="40dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:progress="45"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/upload_progress_bar"/>

    <iitm.speechlab.gettonicfromfile.TableButtonGroupLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:id="@+id/metadata_radio_group"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#fff"
            >
            <RadioButton
                android:checked="true"
                android:id="@+id/metadata_male"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/male"
                />
            <RadioButton
                android:id="@+id/metadata_female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/female"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/metadata_instrument"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/instrument"/>
            <RadioButton
                android:id="@+id/metadata_other"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/other"/>
        </TableRow>
    </iitm.speechlab.gettonicfromfile.TableButtonGroupLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_gravity="center"
        android:id="@+id/calculate_button"
        android:onClick="onCalculateClicked"
        android:layout_marginBottom="20dp"/>

</LinearLayout>